welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: ';' expected but ')' found.
      if (posX == getMondeLargeur()-1 && posY == getMondeHauteur())-2) {
                                                                     ^